# nmealib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/nmea/: context.h  generate.h  generator.h  gmath.h  info.h  parse.h  parser.h  sentence.h  time.h  tok.h  units.h  util.h
src/: context.c  generate.c  generator.c  gmath.c  info.c  parse.c  parser.c  sentence.c  time.c  tok.c  util.c
